unpackaged/main/default/objects/Opportunity/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <label>Customer Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>