unpackaged/main/default/objects/Opportunity/fields/Duplicate_test__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_test__c</fullName>
    <label>Duplicate test</label>
    <length>100</length>
    <type>Text</type>
</CustomField>