unpackaged/main/default/objects/Opportunity/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <length>100</length>
    <type>Text</type>
</CustomField>