unpackaged/main/default/objects/Opportunity/fields/Last_contact__c.field-meta.xml
<CustomField>
    <fullName>Last_contact__c</fullName>
    <label>Last contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>