unpackaged/main/default/objects/Opportunity/fields/New_Description__c.field-meta.xml
<CustomField>
    <fullName>New_Description__c</fullName>
    <label>New Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>