unpackaged/main/default/objects/Opportunity/fields/New_Opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_name__c</fullName>
    <label>New Opportunity name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>