unpackaged/main/default/objects/Opportunity/fields/Order_details__c.field-meta.xml
<CustomField>
    <fullName>Order_details__c</fullName>
    <label>Order details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>